# MixAttn

./: .gitignore  README.md
hopper/: custom_meta.cuh  custom_numerical_limits.h  epilogue_fwd.hpp  flash_fwd_kernel_sm80.h  flash_fwd_kernel_sm90.h  flash_fwd_launch_template.h  mainloop_fwd_sm90_tma_gmma_ws.hpp  mask.h  named_barrier.hpp  softmax.h  softmax_add.cuh  softmax_max.cuh  softmax_mma.h  softmax_wgmma_reduce.cuh  test_flash_attn.py  test_util.py  tile_scheduler.hpp  tile_size.h  utils.h
hopper/cutlass/python/: setup_cutlass.py
hopper/cutlass/python/cutlass/: __init__.py  library_defaults.py  shape.py  swizzle.py
hopper/cutlass/python/cutlass/backend/: __init__.py  arguments.py  c_types.py  compiler.py  conv2d_operation.py  epilogue.py  frontend.py  gemm_operation.py  library.py  memory_manager.py  operation.py  reduction_operation.py
hopper/cutlass/python/cutlass/backend/evt/: __init__.py  epilogue.py
hopper/cutlass/python/cutlass/backend/utils/: __init__.py  device.py
hopper/cutlass/python/cutlass/emit/: __init__.py  pytorch.py
hopper/cutlass/python/cutlass/epilogue/: __init__.py  epilogue.py  evt_ops.py
hopper/cutlass/python/cutlass/op/: __init__.py  conv.py  gemm.py  gemm_grouped.py  op.py
hopper/cutlass/python/cutlass/utils/: __init__.py  check.py  datatypes.py  profiler.py
hopper/cutlass/python/cutlass_library/: conv2d_operation.py  conv3d_operation.py  conv3x_emitter.py  emit_kernel_listing.py  gemm_operation.py  generator.py  manifest.py  rank_2k_operation.py  rank_k_operation.py  sm90_utils.py  symm_operation.py  trmm_operation.py
hopper/cutlass/test/python/cutlass/conv2d/: conv2d_sm80.py  conv2d_test_utils.py
hopper/cutlass/test/python/cutlass/evt/: evt_compute_sm80_90.py  evt_layout_sm80_90.py  evt_load_sm80_90.py  evt_mixed_sm80_90.py  evt_store_sm80_90.py
hopper/cutlass/test/python/cutlass/gemm/: gemm_batched.py  gemm_f16_sm80.py  gemm_f16_sm90.py  gemm_f32_sm80.py  gemm_f64_sm80.py  gemm_f64_sm90.py  gemm_f8_sm90.py  gemm_mixed_sm80.py  gemm_s8_sm80.py  gemm_s8_sm90.py  utils.py
hopper/cutlass/test/python/cutlass/interface/: conv2d_interface.py  evt_interface.py  gemm_interface.py
hopper/cxx-tests/cmake/: cmakePrologue.cmake  flashVenv.cmake  utilFuncs.cmake
hopper/cxx-tests/custom_api/: CMakeLists.txt  custom_api.cuh
hopper/cxx-tests/fwd_bench/: CMakeLists.txt  fa3_fp16_results.csv  fp16-fa3-py.py  fp16-fwd-bench-orig.cu  fp16-fwd-bench.cu  fp8-fa3-py.py  fp8-fwd-bench-orig.cu  fp8-fwd-bench.cu  run.md  run_all_fat_sweeps.sh  run_fat_sweep.py  utils.cuh
hopper/cxx-tests/fwd_bench/image/: data_fa3_h100_fp8.csv  data_ours_h100_fp8.csv  fc.csv  fc.py  h100_fp16_bar_report.html  h100_fp8_bar_report.html  plot_fat_fa3-py_fa3-cpp.py  plot_fp16.py  plot_tc_utilization.py
hopper/cxx-tests/tune/: attn_temp.cu  cfg  configure.py  interface.py  log  tune.py  utils.py  verify.py
hopper/cxx-tests/tune/baseline/: fa3_fp16_results.csv  fp16-fa3-py.py  fp8-fa3-py.py
hopper/cxx-tests/tune/results/: bench_result_test_b1_h16_s30720_d128_fp16_causal.json  bench_result_test_b1_h16_s30720_d128_fp16_noncausal.json  bench_result_test_b1_h16_s30720_d128_fp8_causal.json  bench_result_test_b1_h16_s30720_d128_fp8_noncausal.json  bench_result_test_b1_h16_s30720_d256_fp16_noncausal.json  bench_result_test_b1_h16_s30720_d256_fp8_causal.json  bench_result_test_b1_h16_s30720_d256_fp8_noncausal.json  bench_result_test_b1_h16_s30720_d64_fp16_causal.json  bench_result_test_b1_h16_s30720_d64_fp16_noncausal.json  bench_result_test_b1_h16_s30720_d64_fp8_causal.json  bench_result_test_b1_h16_s30720_d64_fp8_noncausal.json  bench_result_test_b1_h16_s32768_d64_fp16_noncausal.json  bench_result_test_b1_h16_s32768_d64_fp8_noncausal.json
hopper/cxx-tests/tune/src/test_b1_h16_s30720_d64_fp16_causal/cuda_source/: bm128_bn112_st1_prd56_cra256_p4_q2_nc1_sb0_rb0.cu  bm128_bn112_st1_prd56_cra256_p6_q4_nc1_sb0_rb0.cu  bm128_bn112_st1_prd56_cra256_p7_q4_nc1_sb0_rb0.cu  bm128_bn144_st1_prd24_cra200_p0_q4_nc2_sb0_rb0.cu  bm128_bn144_st1_prd24_cra208_p0_q4_nc2_sb0_rb0.cu  bm128_bn144_st1_prd24_cra216_p0_q4_nc2_sb0_rb0.cu  bm128_bn144_st1_prd24_cra224_p0_q4_nc2_sb0_rb0.cu  bm128_bn144_st1_prd24_cra232_p0_q4_nc2_sb0_rb0.cu  bm128_bn144_st1_prd24_cra240_p0_q4_nc2_sb0_rb0.cu  bm128_bn144_st1_prd24_cra240_p0_q4_nc2_sb0_rb1.cu  bm128_bn144_st1_prd24_cra240_p0_q4_nc2_sb1_rb0.cu  bm128_bn144_st1_prd24_cra240_p0_q4_nc2_sb1_rb1.cu  bm128_bn144_st1_prd32_cra200_p0_q4_nc2_sb0_rb0.cu  bm128_bn144_st1_prd32_cra208_p0_q4_nc2_sb0_rb0.cu  bm128_bn144_st1_prd32_cra216_p0_q4_nc2_sb0_rb0.cu  bm128_bn144_st1_prd32_cra224_p0_q4_nc2_sb0_rb0.cu  bm128_bn144_st1_prd32_cra232_p0_q4_nc2_sb0_rb0.cu  bm128_bn144_st1_prd32_cra240_p0_q4_nc2_sb0_rb0.cu  bm128_bn144_st1_prd56_cra256_p1_q1_nc1_sb0_rb0.cu  bm128_bn144_st1_prd56_cra256_p2_q2_nc1_sb0_rb0.cu  bm128_bn144_st2_prd48_cra256_p4_q3_nc1_sb0_rb1.cu  bm128_bn144_st2_prd56_cra256_p4_q3_nc1_sb0_rb0.cu  bm128_bn144_st2_prd56_cra256_p4_q3_nc1_sb0_rb1.cu  bm128_bn144_st2_prd64_cra256_p4_q3_nc1_sb0_rb1.cu  bm128_bn160_st1_prd56_cra256_p5_q4_nc1_sb0_rb0.cu  (+137 more)
(+189 files in other folders)
